--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
   <div class="home-page">
     <div class="home-container">
       <div class="xo">
-        <img class="top-xo" src="./assets/icon-x.svg" alt="">
-        <img class="top-xo" src="./assets/icon-o.svg" alt="">
+        <img class="top-xo" src="./assets/icon-x.svg" alt=""/>
+        <img class="top-xo" src="./assets/icon-o.svg" alt=""/>
       </div>
       <div class="home-choose">
         <p class="pick-p">Pick player 1's mark</p>
@@ -37,7 +37,7 @@
     <div class="announcement-container">
       <p class="secondary-winner"></p>
       <div class="round-taker-container">
-        <img src="./assets/icon-o.svg" alt="" class="round-taker">
+        <img src="./assets/icon-o.svg" alt="" class="round-taker"/>
         <p class="primary-winner">TAKES THE ROUND</p>
       </div>
       <div class="announcement-buttons">
@@ -61,17 +61,17 @@
   <div class="gameboard">
 
     <div class="xo">
-      <img class="top-xo" src="./assets/icon-x.svg" alt="">
-      <img class="top-xo" src="./assets/icon-o.svg" alt="">
+      <img class="top-xo" src="./assets/icon-x.svg" alt=""/>
+      <img class="top-xo" src="./assets/icon-o.svg" alt=""/>
     </div>
 
     <div class="turn">
-      <img  class="turn-icon" src="" alt="">
+      <img  class="turn-icon" src="" alt=""/>
       <p class="turn-indicator">TURN</p>
     </div>
 
     <div class="restart-container">
-      <img onclick="restart()" src="./assets/icon-restart.svg" alt="">
+      <img onclick="restart()" src="./assets/icon-restart.svg" alt=""/>
     </div>
 
     <div class="box" id="0"></div>
